<resources>
    <string name="app_name">MovieList</string>



    <string name="text_rating">Rating: %s</string>
    <string name="text_movie_detail_title">Movie Detail</string>
    <string name="text_movie_detail_overview_title">OVERVIEW:</string>
    <string name="text_error_dialog_okey">OKEY.</string>



    <string name="dummy_movie_title">The Dark Knight</string>
    <string name="dummy_movie_language">English</string>
    <string name="dummy_movie_date">2012-10-10</string>
    <string name="dummy_movie_vote_count">4002 vote</string>
    <string name="dummy_movie_vote_rating">Raiting: 8.2</string>

    <string name="dummy_movie_detail_overview">For as long as he can remember, Ichigo Kurosaki has been able to see ghosts. But when he meets Rukia, a Soul Reaper who battles evil spirits known as Hollows, he finds his life is changed forever. Now, with a newfound wealth of spiritual energy, Ichigo discovers his true calling: to protect the</string>



</resources>
